--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @plugin 'tailwindcss-animate';
 
@@ -185,23 +185,23 @@
 }
 
 @utility glass-1 {
-  @apply border border-border/15 bg-linear-to-b from-card/80 to-card/40 dark:border-b-0 dark:border-border/5 dark:border-t-border/10 dark:from-card/5 dark:to-card/0;
+  @apply border-border/15 from-card/80 to-card/40 dark:border-border/5 dark:border-t-border/10 dark:from-card/5 dark:to-card/0 border bg-linear-to-b dark:border-b-0;
 }
 
 @utility glass-2 {
-  @apply border border-border/15 bg-linear-to-b from-card/100 to-card/80 dark:border-b-0 dark:border-border/5 dark:border-t-border/10 dark:from-card/10 dark:to-card/5;
+  @apply border-border/15 from-card/100 to-card/80 dark:border-border/5 dark:border-t-border/10 dark:from-card/10 dark:to-card/5 border bg-linear-to-b dark:border-b-0;
 }
 
 @utility glass-3 {
-  @apply border border-border/15 bg-linear-to-b from-card/30 to-card/20 dark:border-b-0 dark:border-border/5 dark:border-t-border/10;
+  @apply border-border/15 from-card/30 to-card/20 dark:border-border/5 dark:border-t-border/10 border bg-linear-to-b dark:border-b-0;
 }
 
 @utility glass-4 {
-  @apply border border-border/80 border-b-input/90 bg-linear-to-b from-card/60 to-card/20 dark:border-b-0 dark:border-border/5 dark:border-t-border/20 dark:from-primary/10 dark:to-primary/5;
+  @apply border-border/80 border-b-input/90 from-card/60 to-card/20 dark:border-border/5 dark:border-t-border/20 dark:from-primary/10 dark:to-primary/5 border bg-linear-to-b dark:border-b-0;
 }
 
 @utility glass-5 {
-  @apply border border-border/100 border-b-input bg-linear-to-b from-card/100 to-card/20 dark:border-b-0 dark:border-border/5 dark:border-t-border/20 dark:from-primary/15 dark:to-primary/5;
+  @apply border-border/100 border-b-input from-card/100 to-card/20 dark:border-border/5 dark:border-t-border/20 dark:from-primary/15 dark:to-primary/5 border bg-linear-to-b dark:border-b-0;
 }
 
 @utility fade-x {
